completely finished the header

--- a/src/pages/HomePage/header/headerWrap/headerLogo/headerLogo.module.sass
+++ b/src/pages/HomePage/header/headerWrap/headerLogo/headerLogo.module.sass
@@ -1,4 +1,9 @@
 .headerLogo
-    max-width: 81px
+    width: 100px
     display: flex
     justify-content: space-between
+    align-items: center
+    @media (max-width: 768px)
+        width: 70px
+        @media (max-width: 540px)
+            display: none
