--- a/src/pages/HomePage/header/headerWrap/headerSearch/headerSearch.module.sass
+++ b/src/pages/HomePage/header/headerWrap/headerSearch/headerSearch.module.sass
@@ -1,1 +1,22 @@
+.headerSearch
+    width: 81px
+    display: flex
+    justify-content: space-between
+    align-items: center
+    @media (max-width: 540px)
+        width: 24px
+        display: inline
+        @media (max-width: 335px)
+            width: 16px
 
+.headerSearchText
+    font-family: Montserrat
+    font-size: 12px
+    font-weight: 700
+    text-align: left
+    text-underline-position: from-font
+    text-decoration-skip-ink: none
+    @media (max-width: 768px)
+        font-size: 11px
+        @media (max-width: 540px)
+            display: none
