--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.cdnfonts.com/css/sunday-best?styles=61789");
+@import "./assets/fontsCopy/SundayBest.css";
+@import "./assets/veriables/veriables.module.css";
+
 * {
   box-sizing: border-box;
 }
