--- a/src/pages/HomePage/header/header.module.sass
+++ b/src/pages/HomePage/header/header.module.sass
@@ -1,3 +1,11 @@
-.header__wrapper
+.headerWrapper
     max-width: 1140px
     margin: 0 auto
+
+.header
+    @media (max-width: 1200px)
+        padding-left: 24px
+        padding-right: 24px
+        @media (max-width: 768px)
+            padding-left: 14px
+            padding-right: 14px
