--- a/src/assets/fontsCopy/SundayBest.css
+++ b/src/assets/fontsCopy/SundayBest.css
@@ -1,7 +1,6 @@
-@font-face{
-    font-family: "Sunday Best";
-    src: url("./sundaybestrusbylnce.otf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+@font-face {
+  font-family: "Sunday Best";
+  src: url("./sundaybestrusbylnce.otf") format("embedded-opentype");
+  font-weight: normal;
+  font-style: normal;
 }
-  
