--- a/src/components/header/headerWrap/headerWrap.module.sass
+++ b/src/components/header/headerWrap/headerWrap.module.sass
@@ -2,5 +2,5 @@
     max-width: 1140px
     display: flex
     justify-content: space-between
-    margin: 0 auto
+    margin: 10px auto 0
     align-items: center
