almost done categories

--- a/src/components/footer/footerFeedback/FooterFeedback.module.sass
+++ b/src/components/footer/footerFeedback/FooterFeedback.module.sass
@@ -26,6 +26,8 @@ body
                         flex-direction: row
                         margin-top: 25px
                         width: 254px
+                        @media (max-width: 310px)
+                            width: 135px
     &Wrap
         display: flex
         flex-direction: column
@@ -44,6 +46,8 @@ body
             width: 134px
             @media (max-width: 455px)
                 width: 190px
+                @media (max-width: 310px)
+                    width: 130px
     &Link
         font-family: "Sunday Best"
         font-size: 12px
