finished making the category block

--- a/src/components/header/headerWrap/headerDate/headerNumber/headerNumber.module.sass
+++ b/src/components/header/headerWrap/headerDate/headerNumber/headerNumber.module.sass
@@ -3,6 +3,7 @@
     display: flex
     justify-content: space-around
     align-items: center
+    cursor: pointer
     @media (max-width: 1000px)
         width: 155px
         justify-content: space-between
