--- a/src/components/header/headerWrap/headerSearch/headerSearch.module.sass
+++ b/src/components/header/headerWrap/headerSearch/headerSearch.module.sass
@@ -8,6 +8,8 @@
         display: inline
         @media (max-width: 335px)
             width: 16px
+    svg
+        cursor: pointer
 
 .headerSearchText
     font-family: Montserrat
