--- a/src/components/instagram/Instagram.module.sass
+++ b/src/components/instagram/Instagram.module.sass
@@ -30,3 +30,4 @@ img
         align-items: flex-end
         @media (max-width: 870px)
             align-items: inherit
+            justify-content: space-evenly
