--- a/src/components/instagram/instagramBlock/InstagramBlock.module.sass
+++ b/src/components/instagram/instagramBlock/InstagramBlock.module.sass
@@ -96,6 +96,7 @@ img
         @media (max-width: 870px)
             display: flex
             gap: 6px
+            margin-top: 6px
     &Things
         max-width: 154px
         @media (max-width: 510px)
