--- a/src/components/header/header.module.sass
+++ b/src/components/header/header.module.sass
@@ -1,7 +1,3 @@
-.headerWrapper
-    max-width: 1140px
-    margin: 0 auto
-
 .header
     @media (max-width: 1200px)
         padding-left: 24px
@@ -9,3 +5,6 @@
         @media (max-width: 768px)
             padding-left: 14px
             padding-right: 14px
+    &Wrapper
+        max-width: 1140px
+        margin: 0 auto
