--- a/src/components/header/headerWrap/headerBooriva/headerBooriva.module.sass
+++ b/src/components/header/headerWrap/headerBooriva/headerBooriva.module.sass
@@ -1,5 +1,6 @@
 .headerBooriva
     max-width: 159px
+    cursor: pointer
     @media (max-width: 1000px)
         max-width: 113px
         @media (max-width: 540px)
