--- a/src/components/header/headerWrap/headerDate/headerAdress/headerAdress.module.sass
+++ b/src/components/header/headerWrap/headerDate/headerAdress/headerAdress.module.sass
@@ -3,6 +3,7 @@
     display: flex
     align-items: center
     justify-content: space-around
+    cursor: pointer
     @media (max-width: 1000px)
         width: 167px
         justify-content: space-between
