--- a/src/components/header/menu/menu.module.sass
+++ b/src/components/header/menu/menu.module.sass
@@ -13,6 +13,7 @@
     text-align: left
     text-underline-position: from-font
     text-decoration-skip-ink: none
+    cursor: pointer
     @media (max-width: 768px)
         font-size: 14px
         @media (max-width: 700px)
