--- a/src/pages/HomePage/categories/categories.module.sass
+++ b/src/pages/HomePage/categories/categories.module.sass
@@ -3,9 +3,13 @@
     margin: 0 auto
 
 .categories
-    padding: 15px 24px
-    @media (max-width: 768px)
-        padding: 15px 15px
+    padding: 15px 24px 47px
+    @media (max-width: 1000px)
+        padding: 15px 15px 60px
+        @media (max-width: 768px)
+            padding: 15px 15px 77px
+            @media (max-width: 500px)
+                padding: 8px 15px
     &Wrap
         display: flex
         justify-content: space-between
@@ -14,3 +18,8 @@
             gap: 11px
             @media (max-width: 768px)
                 gap: 8px
+                @media (max-width: 500px)
+                    justify-content: inherit
+                    flex-direction: column
+                    @media (max-width: 350px)
+                        gap: 4px
