--- a/src/pages/HomePage/categories/categoriesRight/CategoriesRight.module.sass
+++ b/src/pages/HomePage/categories/categoriesRight/CategoriesRight.module.sass
@@ -3,10 +3,59 @@ img
 
 .categoriesRight
     max-width: 563px
+    @media (max-width: 500px)
+        max-width: 450px
+        display: flex
+        flex-direction: row-reverse
+        gap: 8px
+        @media (max-width: 350px)
+            gap: 4px
+    &SmallTop
+        display: none
+        @media (max-width: 500px)
+            display: block
+            max-width: 170px
+            position: relative
+    &SmallWrap
+        @media (max-width: 500px)
+            display: flex
+            flex-direction: column
+            gap: 8px
+            @media (max-width: 350px)
+                gap: 4px
+    &SmallPinkTop
+        cursor: pointer
+        max-width: 82px
+        position: absolute
+        right: 8px
+        bottom: 9px
+        display: flex
+        align-items: center
+        justify-content: center
+        @media (max-width: 350px)
+            right: 3px
+            bottom: 21px
+        &Text
+            color: white
+            font-family: Sunday Best
+            position: absolute
+            font-weight: 400
+            font-size: 16px
     &Big
         position: relative
         max-width: 563px
+        @media (max-width: 500px)
+            max-width: 170px
+    &Hoodi
+        display: block
+        @media (max-width: 500px)
+            display: none
+    &HoodiSmall
+        display: none
+        @media (max-width: 500px)
+            display: block
     &Pink
+        cursor: pointer
         max-width: 135px
         display: flex
         bottom: 19px
@@ -22,10 +71,16 @@ img
                 bottom: 8px
                 left: 6px
                 transform: rotate(0deg)
-                // @media (max-width: 480px)
-                //     max-width: 121px
-                //     bottom: 21px
-                //     left: 22px
+                @media (max-width: 600px)
+                    max-width: 88px
+                    @media (max-width: 500px)
+                        max-width: 81px
+                        bottom: 20px
+                        left: 10px
+                        transform: rotate(-36deg)
+                        @media (max-width: 350px)
+                            left: 5px
+                            bottom: 25px
         &Text
             color: white
             font-family: Sunday Best
@@ -35,3 +90,5 @@ img
             transform: rotate(38deg)
             @media (max-width: 768px)
                 font-size: 18px
+                @media (max-width: 600px)
+                    font-size: 16px
