--- a/src/components/header/headerWrap/headerDate/headerDate.module.sass
+++ b/src/components/header/headerWrap/headerDate/headerDate.module.sass
@@ -6,3 +6,6 @@
         width: 167px
         flex-direction: column
         gap: 5px
+        @media (max-width: 700px)
+            width: inherit
+            max-width: 400px
