--- a/src/components/instagram/instagramBlock/InstagramBlock.module.sass
+++ b/src/components/instagram/instagramBlock/InstagramBlock.module.sass
@@ -23,7 +23,7 @@ img
                     @media (max-width: 370px)
                         max-width: 137px
     &Title
-        font-family: Oswald
+        font-family: "Synday Best"
         font-size: 54px
         margin-top: -18px
         @media (max-width: 720px)
