--- a/src/components/header/headerWrap/headerDate/headerAdress/headerAdress.module.sass
+++ b/src/components/header/headerWrap/headerDate/headerAdress/headerAdress.module.sass
@@ -8,21 +8,14 @@
         width: 167px
         justify-content: space-between
         @media (max-width: 700px)
-            width: 160px
-            @media (max-width: 610px)
-                width: 150px
-                @media (max-width: 540px)
-                    display: none
-
-.headerAdressStreet
-    font-size: 12px
-    color: #FDA3C4
-    font-family: Montserrat
-    font-style: italic
-    font-weight: 700
-    text-underline-position: from-font
-    text-decoration-skip-ink: none
-    @media (max-width: 1000px)
-        font-size: 11px
-        @media (max-width: 610px)
-            font-size: 10px
+            display: none
+    &Street
+        font-size: 12px
+        color: #FDA3C4
+        font-family: Montserrat
+        font-style: italic
+        font-weight: 700
+        text-underline-position: from-font
+        text-decoration-skip-ink: none
+        @media (max-width: 1000px)
+            font-size: 11px
