--- a/src/components/header/headerWrap/headerSearch/headerSearch.module.sass
+++ b/src/components/header/headerWrap/headerSearch/headerSearch.module.sass
@@ -1,24 +1,24 @@
-.headerSearch
-    width: 81px
-    display: flex
-    justify-content: space-between
-    align-items: center
-    @media (max-width: 540px)
-        width: 24px
-        display: inline
-        @media (max-width: 335px)
-            width: 16px
+.header
+    &Search
+        width: 81px
+        display: flex
+        justify-content: space-between
+        align-items: center
+        @media (max-width: 700px)
+            width: 24px
+            display: inline
+        &Text
+            font-family: Montserrat
+            font-size: 12px
+            font-weight: 700
+            text-align: left
+            text-underline-position: from-font
+            text-decoration-skip-ink: none
+            @media (max-width: 768px)
+                font-size: 11px
+                @media (max-width: 700px)
+                    display: none
     svg
         cursor: pointer
-
-.headerSearchText
-    font-family: Montserrat
-    font-size: 12px
-    font-weight: 700
-    text-align: left
-    text-underline-position: from-font
-    text-decoration-skip-ink: none
-    @media (max-width: 768px)
-        font-size: 11px
-        @media (max-width: 540px)
-            display: none
+        @media (max-width: 335px)
+            width: 16px
