--- a/src/components/header/headerWrap/headerWrap.module.sass
+++ b/src/components/header/headerWrap/headerWrap.module.sass
@@ -4,3 +4,5 @@
     justify-content: space-between
     margin: 10px auto 0
     align-items: center
+    @media (max-width: 700px)
+        margin: 10px auto
