--- a/src/components/header/menu/menu.module.sass
+++ b/src/components/header/menu/menu.module.sass
@@ -1,22 +1,18 @@
-.menuItems
-    max-width: 1140px
-    display: flex
-    justify-content: space-between
-    margin: 26px auto 0
-    @media (max-width: 540px)
-        display: none
-
-.menuItem
-    font-family: Montserrat
-    font-size: 16px
-    font-weight: 600
-    text-align: left
-    text-underline-position: from-font
-    text-decoration-skip-ink: none
-    cursor: pointer
-    @media (max-width: 768px)
-        font-size: 14px
+.menu
+    &Items
+        max-width: 1140px
+        display: flex
+        justify-content: space-between
+        margin: 26px auto 0
+        height: 100%
         @media (max-width: 700px)
-            font-size: 12px
-            @media (max-width: 610px)
-                font-size: 11px
+            display: none
+    &Item
+        font-family: Montserrat
+        font-weight: 600
+        cursor: pointer
+        height: 100%
+        @media (max-width: 910px)
+            font-size: 14px
+            @media (max-width: 800px)
+                font-size: 12px
