--- a/src/pages/HomePage/categories/categories.module.sass
+++ b/src/pages/HomePage/categories/categories.module.sass
@@ -3,13 +3,12 @@
     margin: 0 auto
 
 .categories
-    padding: 15px 24px 47px
-    @media (max-width: 1000px)
-        padding: 15px 15px 60px
-        @media (max-width: 768px)
-            padding: 15px 15px 77px
-            @media (max-width: 500px)
-                padding: 8px 15px
+    padding: 15px 15px 25px
+    margin-top: 105px
+    @media (max-width: 700px)
+        margin-top: 45px
+        @media (max-width: 500px)
+            padding: 8px 15px
     &Wrap
         display: flex
         justify-content: space-between
