--- a/src/pages/HomePage/categories/categoriesLeft/CategoriesLeft.module.sass
+++ b/src/pages/HomePage/categories/categoriesLeft/CategoriesLeft.module.sass
@@ -10,6 +10,8 @@ img
         @media (max-width: 350px)
             gap: 4px
     &Shirt
+        position: relative
+        z-index: -5
         @media (max-width: 500px)
             display: none
     &ShirtLong
