--- a/src/pages/HomePage/categories/categoriesRight/categoriesRightSmall/CategoriesRightSmall.module.sass
+++ b/src/pages/HomePage/categories/categoriesRight/categoriesRightSmall/CategoriesRightSmall.module.sass
@@ -22,6 +22,8 @@ img
         max-width: 274px
         position: relative
         &Img
+            position: relative
+            z-index: -5
             @media (max-width: 500px)
                 display: none
     &PinkDresses
@@ -57,6 +59,8 @@ img
         max-width: 274px
         position: relative
         &Img
+            position: relative
+            z-index: -5
             @media (max-width: 500px)
                 display: none
     &SuitsLong
