--- a/src/assets/veriables/veriables.module.css
+++ b/src/assets/veriables/veriables.module.css
@@ -1,18 +1,18 @@
-root{
-/*** colors ***/
-    --taffy-pink: #FDA3C4;
-    --big-pink: #FFD4E4;
-    --red: #F40000;
-    --umbra: #1F1F1F;
-    --sweetly: #FFE6EF;
-    --white: #FFFFFF;
-    --grey: #909090;
-    --black: #000;
-    --lightpink: rgba(253, 163, 196, 0.8);
-    --lightblack: rgba(0, 0, 0, 0.77);
+root {
+  /*** colors ***/
+  --taffy-pink: #fda3c4;
+  --big-pink: #ffd4e4;
+  --red: #f40000;
+  --umbra: #1f1f1f;
+  --sweetly: #ffe6ef;
+  --white: #ffffff;
+  --grey: #909090;
+  --black: #000;
+  --lightpink: rgba(253, 163, 196, 0.8);
+  --lightblack: rgba(0, 0, 0, 0.77);
 
-/*** fonts ***/
-  --primary-ff: 'Montserrat', sans-serif;
+  /*** fonts ***/
+  --primary-ff: "Montserrat", sans-serif;
   --secondary-ff: "Sunday Best", sans-serif;
   --light-fw: 300;
   --regular-fw: 400;
@@ -20,6 +20,3 @@ root{
   --semibold-fw: 600;
   --bold-fw: 700;
 }
-
-  
-  
