--- a/src/components/button/Button.module.sass
+++ b/src/components/button/Button.module.sass
@@ -5,8 +5,10 @@
     position: relative
     img
         cursor: pointer
+    &Img
+        width: 100%
     &Text
-        font-family: Montserrat
+        font-family: "Sunday Best"
         position: absolute
         font-weight: 400
         text-align: center
