--- a/src/components/instagram/hoodies/Hoodies.module.sass
+++ b/src/components/instagram/hoodies/Hoodies.module.sass
@@ -34,6 +34,7 @@ img
                                     height: 170px
         img
             width: 100vw
+            object-fit: cover
         &Disp
             @media (max-width: 870px)
                 max-width: 362px
@@ -82,3 +83,4 @@ img
                 display: none
             img
                 width: 100vw
+                object-fit: cover
