--- a/src/components/miniMenu/MiniMenu.module.sass
+++ b/src/components/miniMenu/MiniMenu.module.sass
@@ -8,6 +8,13 @@
         display: block
         border-top: 1px solid #FDA3C4
         padding: 5px 15px
+        bottom: 0
+        left: 0
+        right: 0
+        width: 100%
+        z-index: 10
+        position: fixed
+        background-color: #fff
     &Items
         display: flex
         justify-content: space-between
@@ -17,6 +24,7 @@
         flex-direction: column
         justify-content: center
         align-items: center
+        color: black
         &Text
             font-family: Montserrat
             font-size: 8px
