--- a/src/components/card/Card.module.sass
+++ b/src/components/card/Card.module.sass
@@ -1,56 +1,49 @@
+img
+    display: block
+
 .newItems
     &CardItem
         cursor: pointer
-        max-width: 360px
-        display: flex
-        flex-direction: column
-        align-items: center
         @media (max-width: 730px)
             max-width: 200px
             @media (max-width: 650px)
                 max-width: 190px
-                @media (max-width: 600px)
+                @media (max-width: 630px)
                     max-width: 250px
-                    @media (max-width: 537px)
+                    @media (max-width: 548px)
                         max-width: 230px
-                        @media (max-width: 497px)
+                        @media (max-width: 507px)
                             max-width: 200px
-                            @media (max-width: 450px)
-                                max-width: 170px
-                                @media (max-width: 380px)
-                                    max-width: 145px
-                                    @media (max-width: 326px)
-                                        max-width: 135px
-                                        @media (max-width: 305px)
-                                            max-width: 125px
+                            @media (max-width: 480px)
+                                display: flex
+                                flex-direction: column
+                                @media (max-width: 450px)
+                                    max-width: 190px
+                                    @media (max-width: 430px)
+                                        max-width: 175px
+                                        @media (max-width: 398px)
+                                            max-width: 155px
+                                            @media (max-width: 358px)
+                                                max-width: 140px
+                                                @media (max-width: 328px)
+                                                    max-width: 130px
+                                                    @media (max-width: 308px)
+                                                        max-width: 115px
+                                                        @media (max-width: 278px)
+                                                            max-width: 105px
+                                                            @media (max-width: 258px)
+                                                                max-width: 90px
         &Common
             max-width: 350px
             position: relative
+            border-bottom: 2px solid #FDA3C4
+            @media (max-width: 635px)
+                width: 100%
         &Img
             display: flex
             justify-content: center
-        &Line
-            width: 320px
-            bottom: 0
-            position: absolute
-            height: 2px
-            background-color: #FDA3C4
-            @media (max-width: 1300px)
-                width: 250px
-                @media (max-width: 1050px)
-                    width: 220px
-                    @media (max-width: 940px)
-                        width: 222px
-                        @media (max-width: 730px)
-                            width: 200px
-                            @media (max-width: 650px)
-                                width: 180px
-                                @media (max-width: 600px)
-                                    width: 205px
-                                    @media (max-width: 450px)
-                                        max-width: 170px
-                                        @media (max-width: 380px)
-                                            max-width: 133px
+            @media (max-width: 635px)
+                width: 100%
         &Heart
             position: absolute
             top: 15px
@@ -60,29 +53,22 @@
                 top: 8px
                 right: 8px
         &Subtitle
-            max-width: 310px
             display: flex
             justify-content: space-between
-            margin-top: 20px
+            margin: 20px auto
             gap: 5px
-            @media (max-width: 1300px)
-                width: 230px
-                @media (max-width: 730px)
-                    max-width: 189px
-                    @media (max-width: 650px)
-                        max-width: 180px
-                        @media (max-width: 450px)
-                            max-width: 159px
-                            margin-top: 10px
-                            @media (max-width: 380px)
-                                max-width: 120px
+            align-items: center
+            @media (max-width: 480px)
+                margin: 20px 10px
+                @media (max-width: 420px)
+                    margin: 12px 0px
         &Text
             max-width: 198px
             font-family: Montserrat
             font-size: 16px
             font-weight: 400
             line-height: 19.5px
-            @media (max-width: 1300px)
+            @media (max-width: 1000px)
                 font-size: 14px
                 @media (max-width: 940px)
                     max-width: 150px
@@ -91,12 +77,14 @@
                         @media (max-width: 650px)
                             font-size: 11px
                             line-height: inherit
-                            @media (max-width: 450px)
-                                max-width: 103px
-                                font-size: 10px
+                            @media (max-width: 480px)
+                                font-size: 12px
                                 @media (max-width: 380px)
-                                    max-width: 83px
-                                    font-size: 8px
+                                    font-size: 11px
+                                    @media (max-width: 320px)
+                                        font-size: 10px
+                                        @media (max-width: 290px)
+                                            font-size: 8px
         &Price
             font-family: Montserrat
             text-align: center
@@ -104,11 +92,14 @@
             font-size: 24px
             font-weight: 700
             color: #FDA3C4
-            @media (max-width: 1300px)
+            @media (max-width: 1000px)
                 font-size: 16px
-                @media (max-width: 450px)
-                    font-size: 14px
-                    width: 63px
+                @media (max-width: 480px)
+                    font-size: 16px
                     @media (max-width: 380px)
-                        font-size: 10px
-                        max-width: 45px
+                        max-width: 48px
+                        font-size: 13px
+                        @media (max-width: 320px)
+                            font-size: 12px
+                            @media (max-width: 290px)
+                                font-size: 10px
