--- a/src/components/header/headerWrap/headerDate/headerNumber/headerNumber.module.sass
+++ b/src/components/header/headerWrap/headerDate/headerNumber/headerNumber.module.sass
@@ -10,6 +10,12 @@
             justify-content: space-between
             @media (max-width: 700px)
                 width: 125px
+                @media (max-width: 335px)
+                    width: 110px
+        &Logo
+            @media (max-width: 335px)
+                width: 20px
+                display: flex
     svg
         @media (max-width: 335px)
             width: 15px
@@ -34,7 +40,8 @@
             width: 82px
             @media (max-width: 335px)
                 width: 69px
-
+                @media (max-width: 270px)
+                    width: 55px
 .m
     @media (max-width: 700px)
         display: flex
@@ -45,3 +52,5 @@
             width: 62vw
             @media (max-width: 390px)
                 width: 70vw
+                @media (max-width: 270px)
+                    width: 65vw
