--- a/src/components/header/headerWrap/headerSearch/headerSearch.module.sass
+++ b/src/components/header/headerWrap/headerSearch/headerSearch.module.sass
@@ -7,6 +7,8 @@
         @media (max-width: 700px)
             width: 24px
             display: inline
+            @media (max-width: 270px)
+                width: 20px
         &Text
             font-family: Montserrat
             font-size: 12px
