--- a/src/components/header/submenu/Submenu.module.sass
+++ b/src/components/header/submenu/Submenu.module.sass
@@ -9,6 +9,15 @@
     border-radius: 0px 0px 3px 3px
     @media (max-width: 700px)
         display: none
+    &Items
+        display: flex
+        justify-content: space-between
+        padding: 10px 20px
+    &Item
+        color: black
+        font-family: Montserrat
+        font-size: 16px
+        font-weight: 600
 
 .hidden
     opacity: 0
@@ -18,6 +27,6 @@
 .show
     opacity: 1
     z-index: 1
-    top: 107px
+    top: 108px
     @media (max-width: 1000px)
         top: 113px
