--- a/src/pages/HomePage/boorivaStore/boorivaStoreImg/BoorivaStoreImg.module.sass
+++ b/src/pages/HomePage/boorivaStore/boorivaStoreImg/BoorivaStoreImg.module.sass
@@ -2,6 +2,7 @@
     max-width: 560px
     img
         width: 100%
+        object-fit: cover
     @media (max-width: 1000px)
         height: 643px
         @media (max-width: 950px)
