--- a/src/components/header/menu/menu.module.sass
+++ b/src/components/header/menu/menu.module.sass
@@ -12,6 +12,7 @@
         font-weight: 600
         cursor: pointer
         height: 100%
+        color: black
         @media (max-width: 910px)
             font-size: 14px
             @media (max-width: 800px)
