--- a/src/components/card/Card.module.sass
+++ b/src/components/card/Card.module.sass
@@ -4,6 +4,7 @@ img
 .newItems
     &CardItem
         cursor: pointer
+        width: calc(50% - 51px)
         @media (max-width: 730px)
             max-width: 200px
             @media (max-width: 650px)
@@ -15,8 +16,7 @@ img
                         @media (max-width: 507px)
                             max-width: 200px
                             @media (max-width: 480px)
-                                display: flex
-                                flex-direction: column
+                                width: 100%
                                 @media (max-width: 450px)
                                     max-width: 190px
                                     @media (max-width: 430px)
@@ -28,15 +28,11 @@ img
                                                 @media (max-width: 328px)
                                                     max-width: 130px
                                                     @media (max-width: 308px)
-                                                        max-width: 115px
-                                                        @media (max-width: 278px)
-                                                            max-width: 105px
-                                                            @media (max-width: 258px)
-                                                                max-width: 90px
+                                                        max-width: inherit
         &Common
             max-width: 350px
             position: relative
-            border-bottom: 2px solid #FDA3C4
+            border-bottom: 3px solid #FDA3C4
             @media (max-width: 635px)
                 width: 100%
         &Img
@@ -63,11 +59,12 @@ img
                 @media (max-width: 420px)
                     margin: 12px 0px
         &Text
-            max-width: 198px
-            font-family: Montserrat
+            color: black
             font-size: 16px
             font-weight: 400
+            max-width: 198px
             line-height: 19.5px
+            font-family: Montserrat
             @media (max-width: 1000px)
                 font-size: 14px
                 @media (max-width: 940px)
