--- a/src/components/header/submenu/Submenu.module.sass
+++ b/src/components/header/submenu/Submenu.module.sass
@@ -1,32 +1,38 @@
 .submenu
-    position: absolute
-    width: 1140px
     left: 0
     right: 0
     height: 48px
-    background-color: #FFF
+    display: flex
+    margin: 0 auto
     transition: .3s
-    border-radius: 0px 0px 3px 3px
+    max-width: 1140px
+    position: absolute
+    justify-content: center
+    background-color: white
+    border-bottom: 1px solid #909090
     @media (max-width: 700px)
         display: none
     &Items
+        width: 672px
         display: flex
+        padding: 15px 0
         justify-content: space-between
-        padding: 10px 20px
     &Item
         color: black
+        font-size: 14px
+        font-weight: 400
+        line-height: 17.07px
         font-family: Montserrat
-        font-size: 16px
-        font-weight: 600
-
+        &:hover
+            color: #FDA3C4
 .hidden
+    top: 0px
     opacity: 0
     z-index: -1
-    top: 0px
 
 .show
     opacity: 1
     z-index: 1
-    top: 108px
+    top: 107px
     @media (max-width: 1000px)
-        top: 113px
+        top: 117px
