--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 body h1,
 h2,
 h3,
@@ -18,6 +22,11 @@ ul,
 li {
   margin: 0;
   padding: 0;
+}
+
+.no-scroll {
+  height: 100vh;
+  overflow: hidden;
 }
 
 .wrapper {
