--- a/src/pages/catalog/Catalog.module.sass
+++ b/src/pages/catalog/Catalog.module.sass
@@ -42,6 +42,12 @@
         width: calc( 50% - -211px )
         @media (max-width: 480px)
             width: inherit
+    &Empty 
+        font-family: Sunday Best 
+        font-weight: 400
+        font-size: 32px
+        line-height: 103.25px
+        color: #FDA3C4
 
 .hb
     max-width: 1140px
