I'm done with the logic of the shopping cart and favorites.

--- a/src/pages/productPage/ProductPage.module.sass
+++ b/src/pages/productPage/ProductPage.module.sass
@@ -30,6 +30,7 @@
                         width: 100%
                         height: inherit
     &Heart
+        cursor: pointer
         position: absolute
         top: 30px
         right: 20px
@@ -147,9 +148,12 @@
         height: 85px
         max-width: 1005 !important
 
-.productPageSizesItem:hover
-    color: #FDA3C4
+// .productPageSizesItem:hover
+//     color: #FDA3C4
 
 .mySwiper2
     @media (max-width: 810px)
         margin-bottom: 10px
+
+.productPageSizesItemsColor
+    color: #FDA3C4
