--- a/src/components/basket/Basket.module.sass
+++ b/src/components/basket/Basket.module.sass
@@ -9,7 +9,6 @@
     transform: translateX(100%)
     @media (max-width: 519px)
         width: 100%
-        padding: 0 15px
     &Wrap
         position: relative
     &Open
@@ -19,14 +18,24 @@
         cursor: pointer
         right: 54px
         top: 39px
-        @media (max-width: 519px)
-            right: 15px
-            top: 45px
-            width: 36px
+        @media (max-width: 1000px)
+            right: 50px
+            top: 40px
+            @media (max-width: 768px)
+                right: 42px
+                top: 19px
+            @media (max-width: 519px)
+                right: 15px
+                top: 48px
+                width: 36px
+                @media (max-width: 320px)
+                    width: 24px
+                    height: 24px
+                    top: 40px
+                    right: 25px
     &SmallCross
         position: relative
-        top: -35px
-        left: 30px
+        cursor: pointer
     &Main
         margin-top: 85px
     &Common
@@ -34,8 +43,8 @@
         flex-direction: column
         gap: 10px
         overflow-y: scroll
-        height: calc(100vh - 544px)
-        width: 88%
+        height: calc(100vh - 460px)
+        width: 89%
         margin: 0 auto 0 0
         &::-webkit-scrollbar
             width: 2px
@@ -44,9 +53,16 @@
         &::-webkit-scrollbar-thumb
             border-radius: 5px
             background-color: #FDA3C4CC
-        @media (max-width: 480px)
-            width: 100%
+        @media (max-width: 1000px)
+            width: 79%
             margin: 0 auto
+            @media (max-width: 519px)
+                width: 88%
+                @media (max-width: 480px)
+                    height: calc(100vh - 460px)
+                    width: 92%
+                    @media (max-width: 320px)
+                        height: calc(100vh - 460px)
     &Title
         font-family: Montserrat
         font-weight: 700
@@ -54,18 +70,37 @@
         line-height: 30.48px
         text-align: center
         margin-bottom: 40px
-        @media (max-width: 519px)
-            font-size: 16px
+        @media (max-width: 768px)
+            margin-bottom: 35px
+            @media (max-width: 519px)
+                font-size: 16px
+                @media (max-width: 320px)
+                    margin-bottom: 20px
     &Desc
         @media (max-width: 480px)
             margin-right: 10px
+        &Wrap
+            display: flex
+            width: 205px
+            justify-content: space-between
+            @media (max-width: 519px)
+                margin-right: 10px
+                @media (max-width: 320px)
+                    width: 155px
         &Title
+            width: 165px
+            height: 40px
             font-family: Montserrat
             font-weight: 600
             font-size: 16px
             margin-bottom: 8px
             @media (max-width: 519px)
                 font-size: 14px
+                width: 145px
+                @media (max-width: 320px)
+                    font-size: 12px
+                    height: inherit
+                    width: 121px
         &Subtitle
             font-family: Montserrat
             font-weight: 400
@@ -73,18 +108,25 @@
             margin-bottom: 30px
             @media (max-width: 519px)
                 font-size: 12px
+                @media (max-width: 320px)
+                    margin-bottom: 20px
         &Price
             font-family: Montserrat
             font-weight: 700
             font-size: 16px
             color: #FDA3C4
+            @media (max-width: 320px)
+                font-size: 12px
     &Img
-        max-width: 155px
+        width: 155px
         height: 180px
         object-fit: cover
         @media (max-width: 480px)
-            max-width: 115px
+            width: 115px
             height: 140px
+            @media (max-width: 320px)
+                width: 90px
+                height: inherit
     &Products
         display: flex
         gap: 10px
@@ -109,6 +151,16 @@
             display: flex
             flex-direction: column
             gap: 8px
+            @media (max-width: 480px)
+                width: 351px
+                margin: 0 auto
+                justify-content: space-between
+                @media (max-width: 390px)
+                    width: 291px
+                    @media (max-width: 320px)
+                        width: 250px
+                        @media (max-width: 270px)
+                            width: 215px
         &TitleOrder
             display: flex
             justify-content: space-between
@@ -116,6 +168,8 @@
             font-weight: 400
             font-size: 16px
             color: #FDA3C4
+            @media (max-width: 320px)
+                font-size: 14px
         &TitleDelivery
             display: flex
             justify-content: space-between
@@ -130,6 +184,8 @@
             font-weight: 700
             font-size: 16px
             color: #FDA3C4
+            @media (max-width: 320px)
+                font-size: 14px
     &Btn
         margin-top: 27px
 
